# CUPID

./: .gitignore  LICENSE  README.md  cupid_implementation_review.md  cupid_pipeline_demo.ipynb  example_workflow.py  pyproject.toml  test_cupid_components.py
src/cupid/: __init__.py  checkpoint_utils.py  config.py  cupid.py  data.py  evaluation.py  influence.py  lerobot_env.py  lerobot_integration.py  policy.py  trainer.py  visualization.py
